<resources>

    <string name="app_name">Assistant</string>
    <string name="service_name">Assistant Notification Service</string>
    <string name="peopleInput">Name in app</string>
    <string name="peopleOutput">Read out name</string>
    <string name="peopleExplain">Have people\'s names in apps to be read out as something else here</string>
    <string name="appInput">App package</string>
    <string name="appOutput">Read out message</string>
    <string name="appExplain">Rename an app package name to be read out as something else here</string>
    <string name="blacklistInput">Blacklist text</string>
    <string name="blacklistOutput">Type</string>
    <string name="blacklistExplain">Blacklist any notifications for them not to be read out. Type 0 if the notification contains it, 1 for exact matching and 2 for regex</string>
    <string name="logsExplain">Any notification you get is logged here</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add New</string>
    <string name="refreshAdd">Refresh</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="linkText"> A Link </string>
    <string name="people">People</string>
    <string name="apps">Apps</string>
    <string name="blacklist">Blacklist</string>
    <string name="unblacklist">Unblacklist</string>
    <string name="logs">Logs</string>
    <string name="addDialog">Adding a new</string>
    <string name="editDialog">Editing</string>
    <string name="turnOn">Resume</string>
    <string name="turnOff">Pause</string>
    <string name="pack">App Package</string>
    <string name="title">Notification Title</string>
    <string name="text">Notification Text</string>
    <string name="original">Full</string>
    <string name="fixed">Fixed</string>
    <string name="time">Time</string>
    <string name="privateOn">Set Private</string>
    <string name="privateOff">Set Normal</string>
    <string name="privateClear">Clear</string>
    <string name="hide">Toggle Help</string>
    <string name="importData">Import Lists</string>
    <string name="exportData">Export Lists</string>
    <string name="clearData">Clear Lists</string>
    <string name="backData">Return</string>
    <string name="settings">Settings</string>
    <string name="dash">Dashboard</string>
    <string name="explainData">You can import/export/clear your notification lists here</string>
    <string name="titleSplash1">Android Assistant</string>
    <string name="titleSplash2">Notification Reading Application</string>
    <string name="firstTitleSplash">Thank you for installing!</string>
    <string name="firstSplashOne">Read any notification you receive</string>
    <string name="firstSplashTwo">Blacklist certain notifications so they aren\'t read out</string>
    <string name="firstSplashThree">Set custom names for your apps when read out</string>
    <string name="firstSplashFour">Set custom names for people when read out</string>
    <string name="firstSplashFive">Log notifications and blacklist them from there</string>
    <string name="firstSplashSix">Import/Export your app/people/blacklist lists</string>
    <string name="firstSplashSeven">Turn on/off with a button and use a private mode</string>
    <string name="secondTitleSplash">Application Screens</string>
    <string name="secondSplashOne">Dashboard: The home screen which shows stats on notifications and has buttons for turning on/off and private mode</string>
    <string name="secondSplashTwo">People: This screen allows you to add and edit custom names for people</string>
    <string name="secondSplashThree">Apps: This screen allows you to add and edit custom names for apps</string>
    <string name="secondSplashFour">Blacklist: This screen shows your blacklist for notifications</string>
    <string name="secondSplashFive">Logs: Every notification and its details are logged here</string>
    <string name="secondSplashSix">Toggle Help: Toggle the help messages from here</string>
    <string name="secondSplashSeven">Settings: Access the import/export screen and wipe your data</string>



</resources>
